[package]
name = "image2multires"
version = "0.1.2"
edition = "2024"
authors = ["Franck Barbenoire <fbarbenoire@gmail.com>"]
description = "Generate multires tiles from an image"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/franckinux/image2multires-rs"
keywords = ["cli", "image"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.6", features = ["cargo"] }
image = "0.25"
thiserror = "2.0"
